--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 PG_USER=dev
 PG_PASS=foobar1
 PG_DB=dev1
-PG_ADDR=localhost
+PG_ADDR=127.0.0.1
 SESSION_STORE_KEY="dev"
+SERVER_PORT=8888
+SERVER_ADDR=0.0.0.0
