Apenas iniciar aplicativo depois da inicialização do banco

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,15 @@ services:
   db:
     # Nosso garotão. Dá de 10 a 0 em cima do MySQL.
     image: postgres
+    healthcheck:
+      # Serve de condicional logo após a inicialização do DBMS
+      # para o docker compose saber que o banco padrão foi criado com sucesso
+      # antes de tentar rodar o nosso aplicativo.
+      test: ["CMD-SHELL", "pg_isready -U ${PG_USER} -d ${PG_DB}"]
+      interval: 10s
+      retries: 5
+      start_period: 30s
+      timeout: 10s
     restart: always
     volumes:
       - ./data/postgres:/var/lib/postgresql/data
@@ -29,12 +38,13 @@ services:
     environment:
       # Não tive sorte em conectar com o banco usando "localhost", "127.0.0.1", ou "0.0.0.0" porque
       # o modo em que o docker compose trata endereçamento de rede é diferente do modelo padrão.
-      # O docker compose registra cada serviço como um endereço de rede, e é isso
-      # com que o contêiner usa para conectar-se com o banco.
-      # Não existe motivo para definir isso no .env já que um servidor rodando fora de um contêiner
-      # não apresenta esse problema e não possui essa mesma facilidade.
+      # Felizmente o docker compose registra cada serviço como um endereço de rede, então é isso
+      # que o contêiner usa para conectar-se com o banco.
       PG_ADDR: db
     depends_on:
-      - db
+      db:
+        # Documentado em healthcheck em db.
+        condition: service_healthy
+        restart: true
     ports:
       - 8888:8888
