--- a/.air.toml
+++ b/.air.toml
@@ -5,7 +5,7 @@ tmp_dir = "tmp"
   bin = "./tmp/main"
   cmd = "templ generate && tailwindcss -i views/static/css/input.css -o views/static/css/output.css && go build -v -o ./tmp/main ./server/server.go"
   delay = 500
-  exclude_dir = ["assets", "tmp", "vendor", "data"]
+  exclude_dir = ["assets", "tmp", "vendor", "volumes"]
   exclude_file = []
   exclude_regex = [".*_templ.go", "output.css"]
   exclude_unchanged = false
